# api/openapi/readers.yml
@@ -5,7 +5,7 @@ info:
   version: "1.0.0"
 
 paths:
-  /profiles/{profileId}/messages:
+  /messages:
     get:
       summary: Retrieves messages sent to single profile
       description: |
@@ -16,10 +16,10 @@ paths:
       tags:
         - messages
       parameters:
-        - $ref: "#/components/parameters/ProfileId"
         - $ref: "#/components/parameters/Limit"
         - $ref: "#/components/parameters/Offset"
         - $ref: "#/components/parameters/Name"
+        - $ref: "#/components/parameters/Subtopic"
         - $ref: "#/components/parameters/Value"
         - $ref: "#/components/parameters/BoolValue"
         - $ref: "#/components/parameters/StringValue"
@@ -102,14 +102,6 @@ components:
                 description: Time of updating measurement.
 
   parameters:
-    ProfileId:
-      name: profileId
-      description: Unique profile identifier.
-      in: path
-      schema:
-        type: string
-        format: uuid
-      required: true
     Limit:
       name: limit
       description: Size of the subset to retrieve.
@@ -132,6 +124,13 @@ components:
     Name:
       name: name
       description: SenML message name.
+      in: query
+      schema:
+        type: string
+      required: false
+    Subtopic:
+      name: subtopic
+      description: SenML message subtopic.
       in: query
       schema:
         type: string
